syncdoc/tests/roundtrip/snapshots/ui/roundtrip__helpers__docs_ui_draw.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Renders the active view based on current application state.
