syncdoc/tests/roundtrip/snapshots/ui/roundtrip__helpers__docs_ui_get_tree_prefix.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Generate box-drawing prefix for tree structure
